mini-pascal/test_cases/bad/Example5.pas
Program Example5;
(* COMMENTS *)
Begin
	Writeln('Hello World. Prepare to learn PASCAL!!';
	Readln;
End.